--- a/templates/src/domain/index.ejs
+++ b/templates/src/domain/index.ejs
@@ -1,6 +1,6 @@
 export * from './domain.error'
-<%_ if (domains.length > 0) { _%>
-    <%_ for (const domain of domains) { _%>
-export * from './<%= domain %>/entity'
+<%_ if (Object.keys(entities).length > 0) { _%>
+    <%_ for (const domain of Object.keys(entities)) { _%>
+export * from './<%= entities[domain].pascalCase %>/entity'
     <%_ } %>
 <%_ } %>
