Add singular names

--- a/templates/src/domain/entity-name/errors/EntityNameNotFoundError.ejs
+++ b/templates/src/domain/entity-name/errors/EntityNameNotFoundError.ejs
@@ -1,7 +1,7 @@
 import { <%= entityNames.pascalCase %>Error } from './<%= entityNames.pascalCase %>Error'
 import { format } from 'util'
 
-const MESSAGE = '<%= entityNames.sentenceCase %> with ID "%s" was not found'
+const MESSAGE = '<%= entityNames.singular(entityNames.sentenceCase) %> with ID "%s" was not found'
 
 export class <%= entityNames.pascalCase %>NotFoundError extends <%= entityNames.pascalCase %>Error {
   constructor (id: string) {
