--- a/templates/src/services/EntityNameService.ejs
+++ b/templates/src/services/EntityNameService.ejs
@@ -1,6 +1,7 @@
 import { ObjectId } from 'mongodb'
 import { <%= entityNames.pascalCase %> } from '../domain'
 import { <%= entityNames.pascalCase %>Repository } from '../data/repositories/<%= entityNames.pascalCase %>Repository'
+import { <%= entityNames.pascalCase %>NotFoundError } from '../domain/<%= entityNames.kebabCase %>/errors/<%= entityNames.pascalCase %>NotFoundError'
 
 
 export class <%= entityNames.pascalCase %>Service {
