--- a/templates/root/package.ejs
+++ b/templates/root/package.ejs
@@ -41,10 +41,17 @@
     "typescript": "^3.1.1"
   },
   "dependencies": {
+    "@expresso/app": "^1.0.3",
+    "@expresso/auth": "^1.0.5",
+    "@expresso/errors": "^1.0.4",
     "@expresso/expresso": "^0.15.0",
-    "@nxcd/paradox": "^2.8.2",
+    "@expresso/server": "^1.0.2",
+    "@nxcd/paradox": "^2.11.2",
+    "@types/mocha": "^5.2.6",
     "express-rescue": "^1.1.5",
     "mongodb": "^3.1.10",
-    "sugar-env": "^1.5.3"
+    "reflect-metadata": "^0.1.13",
+    "sugar-env": "^1.5.3",
+    "tsyringe": "^3.0.1"
   }
 }
