--- a/templates/src/services/EntityNameService.ejs
+++ b/templates/src/services/EntityNameService.ejs
@@ -1,8 +1,10 @@
 import { ObjectId } from 'mongodb'
+import { injectable } from 'tsyringe'
 import { <%= entityNames.pascalCase %> } from '../domain'
 import { <%= entityNames.pascalCase %>Repository } from '../data/repositories/<%= entityNames.pascalCase %>Repository'
 import { <%= entityNames.pascalCase %>NotFoundError } from '../domain/<%= entityNames.kebabCase %>/errors/<%= entityNames.pascalCase %>NotFoundError'
 
+@injectable()
 export class <%= entityNames.pascalCase %>Service {
   private readonly repository: <%= entityNames.pascalCase %>Repository
 
