Update templates to include typings

--- a/templates/root/package.ejs
+++ b/templates/root/package.ejs
@@ -30,6 +30,7 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.12",
     "@types/node": "^10.11.6",
+    "@types/express-serve-static-core": "^4.16.2",
     "concurrently": "^4.0.1",
     "husky": "^1.1.2",
     "mocha": "^5.2.0",
@@ -45,6 +46,7 @@
     "@expresso/auth": "^1.0.5",
     "@expresso/errors": "^1.0.4",
     "@expresso/expresso": "^0.15.0",
+    "@expresso/validator": "^1.0.3",
     "@expresso/server": "^1.0.2",
     "@nxcd/paradox": "^2.11.2",
     "@types/mocha": "^5.2.6",
