--- a/templates/root/tsconfig.ejs
+++ b/templates/root/tsconfig.ejs
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
-    "lib": ["es6", "es2017", "es2015.promise", "es2015.iterable", "es2015.proxy"],
+    "lib": ["es6", "es2017", "es2015.promise", "es2015.iterable", "es2015.proxy", "dom", "scripthost"],
     "declaration": true,
     "sourceMap": true,
     "outDir": "./dist",
