--- a/templates/src/domain/entity-name/errors/EntityNameNotFoundError.ejs
+++ b/templates/src/domain/entity-name/errors/EntityNameNotFoundError.ejs
@@ -1,10 +1,11 @@
 import { <%= entityNames.pascalCase %>Error } from './<%= entityNames.pascalCase %>Error'
 import { format } from 'util'
 
-const MESSAGE = '<%= entityNames.singular(entityNames.sentenceCase) %> with ID "%s" was not found'
 
 export class <%= entityNames.pascalCase %>NotFoundError extends <%= entityNames.pascalCase %>Error {
+  static MESSAGE = '<%= entityNames.singular(entityNames.sentenceCase) %> with ID "%s" was not found'
+
   constructor (id: string) {
-    super(format(MESSAGE, id))
+    super(format(<%= entityNames.pascalCase %>NotFoundError.MESSAGE, id))
   }
 }
