Update tsconfig options

--- a/templates/root/tsconfig.ejs
+++ b/templates/root/tsconfig.ejs
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "incremental": true,
     "target": "es2015",
     "module": "commonjs",
     "lib": ["es6", "es2017", "es2015.promise", "es2015.iterable", "es2015.proxy", "dom", "scripthost"],
@@ -8,7 +9,7 @@
     "outDir": "./dist",
     "removeComments": true,
     "strict": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "alwaysStrict": true,
     "noUnusedLocals": true,
