Adds data layers

--- a/templates/root/package.ejs
+++ b/templates/root/package.ejs
@@ -52,7 +52,8 @@
     "@expresso/expresso": "^0.15.0",
     "@expresso/validator": "^1.0.3",
     "@expresso/server": "^1.0.2",
-    "@nxcd/paradox": "^2.11.2",
+    "@irontitan/paradox": "^2.11.2",
+    "@nindoo/mongodb-data-layer": "^1.2.1",
     "@types/mocha": "^5.2.6",
     "express-rescue": "^1.1.5",
     "mongodb": "^3.1.10",
