--- a/templates/src/domain/entity-name/entity.ejs
+++ b/templates/src/domain/entity-name/entity.ejs
@@ -1,5 +1,5 @@
 import { ObjectId } from 'mongodb'
-import { EventEntity } from '@nxcd/paradox'
+import { EventEntity } from '@irontitan/paradox'
 
 export class <%= entityNames.pascalCase %> extends EventEntity<<%= entityNames.pascalCase %>> {
   public id: ObjectId | null = null
