--- a/templates/src/data/repositories/EntityNameRepository.ejs
+++ b/templates/src/data/repositories/EntityNameRepository.ejs
@@ -1,10 +1,11 @@
 import { Db } from 'mongodb'
 import { injectable, inject } from 'tsyringe'
-import { MongodbRepository } from '@nindoo/mongodb-data-layer'
+import { MongodbRepository, Serialized } from '@nindoo/mongodb-data-layer'
+import { I<%= entityNames.pascalCase %> } from '../../domain/<%= entityNames.kebabCase %>/structures/I<%= entityNames.pascalCase %>'
 import { <%= entityNames.pascalCase %> } from '../../domain/<%= entityNames.kebabCase %>/entity'
 
 @injectable()
-export class <%= entityNames.pascalCase %>Repository extends MongodbRepository<<%= entityNames.pascalCase %>, <%= entityNames.pascalCase %>.Serialized> {
+export class <%= entityNames.pascalCase %>Repository extends MongodbRepository<<%= entityNames.pascalCase %>, Serialized<<%= entityNames.pascalCase %>>> {
   static collection = '<%= entityNames.plural(entityNames.kebabCase) %>'
 
   constructor (@inject('MongodbConnection') connection: Db) {
@@ -12,7 +13,7 @@ export class <%= entityNames.pascalCase %>Repository extends MongodbRepository<<
   }
 
   // Serializes your object into JSON representation
-  serialize (entity: <%= entityNames.pascalCase %>) {
+  serialize (entity: I<%= entityNames.pascalCase %>) {
     // Example code
     // return {
     //   _id: entity.id,
@@ -25,7 +26,7 @@ export class <%= entityNames.pascalCase %>Repository extends MongodbRepository<<
   }
 
   // Desserializes JSON into objects
-  deserialize (data: <%= entityNames.pascalCase %>.Serialized) {
+  deserialize (data: Serialized<<%= entityNames.pascalCase %>>) {
     // Example code
     // return {
     //   id: data._id,
