--- a/templates/src/domain/entity-name/entity.ejs
+++ b/templates/src/domain/entity-name/entity.ejs
@@ -1,3 +1,9 @@
 export class <%= entityNames.pascalCase %> {
+  static collection = '<%= entityNames.plural(entityNames.snakeCase) %>'
+
+  contructor () {
+    //
+  }
+
   // Your entity code here
 }
